--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+---
+# Ensure package-lock.json is in sync
 name: Node.js CI/CD
 
 on:
@@ -20,6 +22,11 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+
+      - name: Verify package-lock.json is in sync
+        run: |
+          npm install --package-lock-only
+          git diff --exit-code package-lock.json || (echo "Error: package-lock.json is out of sync! Run 'npm install' locally and commit changes." && exit 1)
 
       - name: Install Dependencies
         run: npm ci
