--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,19 @@
----
-# Auto-fix missing or outdated package-lock.json
-name: Node.js CI/CD
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+name: Go
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5
         with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Ensure package-lock.json exists
-        run: |
-          if [ ! -f package-lock.json ]; then
-            echo "package-lock.json missing, generating..."
-            npm install --package-lock-only
-            git config --global user.name "github-actions"
-            git config --global user.email "github-actions@github.com"
-            git add package-lock.json
-            git commit -m "Auto-generate package-lock.json"
-            git push origin main || echo "No changes to commit"
-          fi
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Tests
-        run: npm test
-
-      - name: Upload Test Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: reports/
-
-  deploy:
-    needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy Application
-        run: echo "Deploying application..."
+          go-version: '1.21.x'
+      - name: Install dependencies
+        run: go get .
+      - name: Build
+        run: go build -v ./...
+      - name: Test with the Go CLI
+        run: go test
